# Vibe-Trading-Portfolio

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  upstream-compatibility.yml
compatibility/: baseline.json
docs/handoff/: CURRENT.md
docs/runbooks/: portfolio-data.md  vibe-compatibility.md
docs/superpowers/plans/: 2026-07-18-vibe-compatibility-spike.md  2026-07-19-live-contract-stabilization.md  2026-07-19-new-session-handoff.md  2026-07-19-portfolio-experience-webui.md
docs/superpowers/specs/: 2026-07-18-personal-portfolio-sidecar-design.md  2026-07-19-live-contract-stabilization-design.md  2026-07-19-new-session-handoff-design.md  2026-07-19-portfolio-experience-webui-design.md
frontend/: .prettierignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tooling.config.test.ts  tsconfig.app.json  tsconfig.node.json  vite.config.test.ts  vite.config.ts
frontend/e2e/: portfolio.spec.ts
frontend/patches/: @typescript-eslint+eslint-plugin+8.64.0.patch  @typescript-eslint+parser+8.64.0.patch  @typescript-eslint+type-utils+8.64.0.patch  @typescript-eslint+typescript-estree+8.64.0.patch  openapi-typescript+7.13.0.patch  ts-api-utils+2.5.0.patch
frontend/src/: main.tsx
frontend/src/api/: client.test.ts  client.ts  client.types.ts  queries.test.ts  queries.ts  schema.d.ts
frontend/src/app/: App.test.tsx  App.tsx  styles.css
frontend/src/components/: AccountForm.tsx  AllocationBars.tsx  CurrencyTabs.tsx  HoldingAnalysis.tsx  PositionForm.tsx  PositionTable.tsx  StatusMessage.tsx  SummaryCards.tsx
frontend/src/lib/: dateTime.test.ts  dateTime.ts  decimal.test.ts  decimal.ts
frontend/src/pages/: HoldingsPage.test.tsx  HoldingsPage.tsx  OverviewPage.test.tsx  OverviewPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx
frontend/tooling/: eslint.config.js  package.json
migrations/: env.py
migrations/versions/: 20260719_0001_portfolio_snapshot.py
scripts/: e2e_fakes.py  export_openapi.py  run_e2e.py  run_e2e_server.py  verify_release_artifacts.py
src/vibe_portfolio/: __init__.py  compatibility.py  config.py
src/vibe_portfolio/api/: __init__.py  app.py  main.py  security.py  static.py
src/vibe_portfolio/cli/: __init__.py  compatibility.py
src/vibe_portfolio/market_data/: __init__.py  eastmoney.py  http.py  models.py  protocol.py  router.py  service.py  tencent.py  yahoo.py
src/vibe_portfolio/mcp/: __init__.py  install.py  server.py
src/vibe_portfolio/portfolio/: __init__.py  database.py  domain.py  persistence_types.py  repository.py  router.py  schemas.py  service.py  tables.py
src/vibe_portfolio/portfolio/migrations/: env.py  script.py.mako
src/vibe_portfolio/vibe/: __init__.py  contract.py  errors.py  gateway.py  mcp_probe.py  models.py  research.py  sse.py  watcher.py
src/vibe_portfolio/web/: __init__.py
tests/: test_config.py
tests/api/: test_security.py  test_static_app.py  test_system_api.py
tests/cli/: test_compatibility_cli.py
tests/contract/: test_live_market_data.py  test_live_vibe_contract.py
tests/market_data/: test_eastmoney.py  test_http.py  test_models.py  test_public_probe.py  test_refresh_service.py  test_search_service.py  test_tencent.py  test_yahoo.py
tests/market_data/fixtures/: eastmoney_quote.json  eastmoney_search.json  tencent_quote.txt  yahoo_chart.json  yahoo_search.json
tests/mcp/: test_install.py  test_server.py
tests/portfolio/: conftest.py  test_accounts_api.py  test_database.py  test_domain.py  test_idempotency.py  test_instruments_api.py  test_migrations.py  test_persistence_types.py  test_positions_api.py  test_refresh_api.py  test_search_api.py  test_settings_api.py  test_summary.py  test_summary_api.py
tests/scripts/: test_e2e_harness.py  test_release_artifacts.py
tests/vibe/: test_compatibility.py  test_gateway.py  test_mcp_probe.py  test_runtime_contract.py  test_watcher.py
(+6 files in other folders)
